<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_videojuego">Añadir videojuego</string>
    <string name="app_name">Gestión de videojuegos</string>
    <string name="jugado">Videojuego jugado</string>
    <string name="delete_video_game">Eliminar Videojuego</string>
    <string name="edit_video_game">Editar Videojuego</string>
    <string name="confirm_delete">¿Estás seguro de que deseas eliminar este videojuego?</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="name">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="inicio">Iniciar sesión</string>
    <string name="inicio_true">Usuario y contraseña correctos, iniciando...</string>
    <string name="inicio_false">Usuario o contraseña erróneos</string>
    <string name="nombre_v">Nombre del videojuego</string>
    <string name="desc">Descripción</string>
    <string name="url">Url del videojuego</string>
    <string name="tel">Teléfono de contacto</string>
    <string name="date">Fecha de salida</string>
    <string name="voice_button_description">Botón de reconocimiento de voz</string>
    <string name="voice_prompt">Habla ahora. Muestra la lista completa, crea o busca un videojuego</string>
    <string name="image">Añadir imagen</string>
    <string name="error">Error</string>
    <string name="videojuego_not_found">No se encontró ningún videojuego con el nombre "%1$s".</string>
    <string name="ok">OK</string>
    <string name="sort_name">Ordenar por nombre</string>
    <string name="sort_val">Ordenar por valoración</string>
    <string name="delete_failed">Id de objeto no encontrada</string>
    <string name="app_info">Mostrar info aplicación</string>
    <string name="error_loading_info">Imposible mostrar la información</string>
</resources>